--- a/public/bot/src/modules/Main/Main.css
+++ b/public/bot/src/modules/Main/Main.css
@@ -42,6 +42,7 @@ div.fullscreen {
 }
 
 .click-me {
+    text-align:center;
     font-weight: 500 !important;
     font-size: 16px !important;
     color: #6e9fa5 !important;
